@@ -5,6 +5,9 @@ http://www.springframework.org/osgi
 Changes in version 1.2.1 (2009-mm-dd)
 -------------------------------------
 
+Package org.springframework.osgi.config
+* improved further the definition of generated definitions to avoid IDE validation complains
+
 
 Changes in version 1.2.0 final (2009-04-09)
 -------------------------------------------
